<resources>
    <string name="app_name">oumayma_s_application2</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
    <string name="lbl_continue">Continue</string>
    <string name="msg_write_something">write something...</string>
    <string name="lbl_hours_earned">Hours Earned</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_next">Next</string>
    <string name="msg_don_t_have_an_a">"Don't have an account?  Sign up "</string>
    <string name="lbl_reclamation2">Reclamation </string>
    <string name="lbl_full_name2">Full Name </string>
    <string name="msg_location_123_x">Location: 123 xxx Street, State College, PA</string>
    <string name="lbl4">%)</string>
    <string name="lbl2">*</string>
    <string name="lbl_phone">Phone *</string>
    <string name="lbl3">(</string>
    <string name="lbl_oumayma_cherif">Oumayma Cherif</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_rasith">Rasith</string>
    <string name="lbl_medical">Medical</string>
    <string name="msg_enjoy_your_favo2">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. </string>
    <string name="lbl_04_30_21">04/30/21</string>
    <string name="lbl_clothes">Clothes</string>
    <string name="lbl_description">Description</string>
    <string name="msg_green_actions_f">Green Actions for a Greener Planet</string>
    <string name="msg_create_your_own">Create your own fundraising and&#xd;
publish in to the world &#xd;</string>
    <string name="lbl_may_25_2021">May 25, 2021</string>
    <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum </string>
    <string name="lbl_participation">Participation</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor non vestibulum vitae.</string>
    <string name="msg_already_have_ac">Already have account?  Sign in </string>
    <string name="lbl_you_completed">You Completed :</string>
    <string name="lbl_games_online">Games Online</string>
    <string name="lbl_password2">Password </string>
    <string name="lbl_cardboard">Cardboard</string>
    <string name="lbl_descrption">Descrption</string>
    <string name="msg_lorem_ipsum_dol5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci nulla sagittis proin faucibus tincidunt. Eu ac feugiat turpis dolor pretium etiam id senectus arcu. Lacus, lorem lorem tristique facilisi tincidunt......</string>
    <string name="lbl_dark_mode">Dark Mode</string>
    <string name="msg_lorem_ipsum_dol4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci nulla sagittis proin faucibus tincidunt. Eu ac feugiat turpis dolor pretium etiam id senectus arcu. Lacus, lorem lorem tristique facilisi tincidunt......Read more</string>
    <string name="lbl_art">Art</string>
    <string name="lbl_sign_in">Sign in </string>
    <string name="lbl_2_5">2.5</string>
    <string name="lbl_for_cardboard">For Cardboard,</string>
    <string name="msg_sign_in_with_pa">Sign in with password</string>
    <string name="msg_sign_in_to_your">Sign in to your account! </string>
    <string name="lbl_sms">SMS</string>
    <string name="lbl_left">Left:</string>
    <string name="msg_university_heig">University Heights</string>
    <string name="lbl_change">Change</string>
    <string name="msg_find_for_collec">Find for collection point </string>
    <string name="lbl_location">Location *</string>
    <string name="msg_raised_1900">Raised: $1900 (95%)</string>
    <string name="msg_help_sarah_to_d">Help sarah to defet ...</string>
    <string name="lbl_social">Social</string>
    <string name="lbl_gender2">Gender </string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_rewards">rewards</string>
    <string name="msg_organized_the_s">organized the shed</string>
    <string name="msg_dhaka_banglades">Dhaka Bangladesh</string>
    <string name="lbl_difable">Difable</string>
    <string name="lbl_130">$130</string>
    <string name="lbl_date">Date</string>
    <string name="msg_or_continue_wit">Or continue with</string>
    <string name="lbl_disaster">Disaster</string>
    <string name="lbl_gender">Gender *</string>
    <string name="lbl_apple">Apple</string>
    <string name="lbl_interest">Interest</string>
    <string name="lbl_add_photo2">add photo</string>
    <string name="msg_limit_is_exceed">Limit is exceeded:</string>
    <string name="msg_don_t_have_an_a2">"Don't have an account?  "</string>
    <string name="lbl_05_20_21_6_57pm">05/20/21 6:57pm</string>
    <string name="lbl_package">Package</string>
    <string name="lbl_google">Google</string>
    <string name="lbl_monika_islam">Monika Islam</string>
    <string name="msg_i_would_like_to">I would like to...</string>
    <string name="lbl_instructions">Instructions:</string>
    <string name="lbl_post">post</string>
    <string name="msg_recycle_over_10">Recycle over 100 bottles weekly</string>
    <string name="lbl_reclamation">Reclamation</string>
    <string name="lbl_592_spent">$592 spent</string>
    <string name="msg_jo_malone_londo">Jo Malone London\u2019s Mother\u2019s Day Presents</string>
    <string name="lbl_raised_1900">Raised: $1900 </string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_electric">Electric</string>
    <string name="lbl_rewards2">Rewards</string>
    <string name="lbl_proposition">proposition</string>
    <string name="lbl_medic">Medic</string>
    <string name="msg_help_them_for_b">Help them for better education</string>
    <string name="lbl_news">News</string>
    <string name="lbl_add_item">Add Item</string>
    <string name="lbl_password">Password *</string>
    <string name="msg_radius_gallery">Radius Gallery \u2022 Santa Cruz, CA&#xd;</string>
    <string name="lbl_saved">Saved</string>
    <string name="lbl_read_more2">Read more</string>
    <string name="lbl_comment">comment</string>
    <string name="lbl_location2">Location </string>
    <string name="msg_donate_easily">Donate easily, quickly, right on &#xd;
target all over the world&#xd;</string>
    <string name="msg_select_your_int">Select Your Interest</string>
    <string name="lbl_120_donated">120+ donated</string>
    <string name="msg_activity_descri">Activity Description</string>
    <string name="msg_claim_your_rewa">Claim your Reward Now</string>
    <string name="msg_choose_your_int">"Choose your interest to donate. Don't worry, you can always change it later."</string>
    <string name="lbl_phone2">Phone </string>
    <string name="lbl_filter">filter</string>
    <string name="lbl_events_list">Events list</string>
    <string name="lbl_add_photo">Add Photo</string>
    <string name="lbl_20">20</string>
    <string name="lbl_environment">Environment</string>
    <string name="lbl_claim">Claim</string>
    <string name="lbl_product_s">product(s):</string>
    <string name="lbl_22">2</string>
    <string name="lbl_message">message</string>
    <string name="msg_wed_apr_28_5">Wed, Apr 28 \u2022&#xd;5:30 PM&#xd;</string>
    <string name="lbl_plastic">Plastic</string>
    <string name="msg_add_volunteer_h">add volunteer hours  +</string>
    <string name="lbl_confirm">Confirm </string>
    <string name="lbl_food">Food</string>
    <string name="lbl_infrastructure">Infrastructure</string>
    <string name="lbl_others">Others</string>
    <string name="lbl_about_me">About Me</string>
    <string name="msg_p_patch_locatio">P-Patch Location</string>
    <string name="lbl_email2">Email </string>
    <string name="msg_recycling_centr">Recycling Centre</string>
    <string name="lbl_182">$18</string>
    <string name="lbl_orphanage">Orphanage</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_log_in">Log In </string>
    <string name="msg_we_need_to_chan">We Need To Change
Our Scoiety</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_invite_frinds">Invite Frinds</string>
    <string name="lbl_95">95</string>
    <string name="lbl_12">12</string>
    <string name="msg_sign_up_for_fre">Sign up for free</string>
    <string name="lbl_10">-$10</string>
    <string name="lbl_sign_up">Sign up </string>
    <string name="lbl_concert">Concert</string>
    <string name="lbl_sick_child">Sick child</string>
    <string name="lbl_volunteer_hours">volunteer hours</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet,adipisci consectetur adipisci ipsum dolor.....</string>
    <string name="msg_anyone_want_to">Anyone want to trade some of my extra roma tomatoes for other produce?</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_15">15</string>
    <string name="lbl_5_20">5/20</string>
    <string name="lbl_carton">Carton</string>
    <string name="lbl_18">18%</string>
    <string name="lbl_goals_2_000">Goals: $2,000</string>
    <string name="lbl_rasith001">\@rasith001</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_read_more">Read More</string>
    <string name="lbl">...</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_05_07_21">05/07/21</string>
    <string name="lbl_donate_now">Donate Now</string>
    <string name="msg_claim_your_rewa2">Claim your Reward</string>
    <string name="lbl_email">Email *</string>
    <string name="lbl_1">1</string>
    <string name="msg_john_is_trading">John is trading roma tomatoes</string>
    <string name="lbl_remeber_me">Remeber me</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_humanity">Humanity</string>
    <string name="msg_forgot_the_pass">Forgot the password?</string>
    <string name="lbl_security">Security</string>
    <string name="msg_provide_a_detai">Provide a detailed description for the volunteer activity you completed. 
(Who, what, when, where, &amp; why)</string>
    <string name="lbl_music">Music</string>
    <string name="lbl_avis">avis</string>
    <string name="lbl_comments_58">Comments(58)</string>
    <string name="lbl_add">ADD +</string>
    <string name="msg_recycling_centr2">Recycling Centre Ariana</string>
    <string name="lbl_forgot_password">Forgot password</string>
    <string name="lbl_email3">Email</string>
    <string name="lbl_movie">Movie</string>
    <string name="msg_swept_the_walkw">swept the walkways</string>
    <string name="msg_created_3_day_a">Created 3 day ago</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_blood_donation">Blood Donation</string>
    <string name="lbl_let_s_you_in">Let\u2019s you in </string>
    <string name="msg_select_which_co">select which contact details should we use to reset your password</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_education">Education</string>
    <string name="msg_collecting_and">collecting and reporting hours </string>
    <string name="lbl_help">Help</string>
    <string name="msg_recycle_categor">Recycle Categories</string>
    <string name="msg_fill_your_profi">Fill Your Profile</string>
    <string name="lbl_fremont">Fremont</string>
    <string name="msg_already_have_ac2">Already have account?  </string>
    <string name="msg_rue_imem_sahnou">Rue imem sahnoun \u2022 Ariana&#xd;</string>
    <string name="msg_enjoy_your_favo">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. Read More</string>
</resources>