<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="list050721RowModel" type="com.oumaymasapplication.app.modules.frame223.data.model.List050721RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRow050721"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylebluegray_700cornerRadius">
        <TextView android:ellipsize="end" android:id="@+id/txt050721"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_weight="0.24" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{list050721RowModel.txt050721}"
            style="@style/txtHelvetica16" tools:text="@string/lbl_05_07_21"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSweptthewalkw"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_weight="0.61" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{list050721RowModel.txtSweptthewalkw}"
            style="@style/txtHelvetica16" tools:text="@string/msg_swept_the_walkw"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupFortyThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_14pxh"
            android:paddingStart="@dimen/_14pxh"
            android:paddingTop="@dimen/_6pxv" android:singleLine="true"
            android:text="@{list050721RowModel.txtGroupFortyThree}"
            style="@style/txtSolidRounded_5" tools:text="@string/lbl_1"/>
    </LinearLayout>
</layout>
