<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="insideFundraiserOneVM" type="com.oumaymasapplication.app.modules.insidefundraiserone.data.viewmodel.InsideFundraiserOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearInsidefundrais"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_51">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <LinearLayout android:id="@+id/linearRowsearch"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_276pxh"
                    android:layout_weight="0.85"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_white_a700_border_teal_400_radius_10"
                        android:id="@+id/btnSearch"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_width="@dimen/_20pxh"
                        android:paddingHorizontal="@dimen/_4pxh"
                        android:paddingVertical="@dimen/_4pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_search_teal_400" tools:ignore="ContentDescription"/>
                    <ImageView android:id="@+id/imageGroup"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_4pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_group_gray_905"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_group_gray_905"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameStackrectangle1485"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_178pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_22pxv" android:layout_width="@dimen/_343pxh">
            <ImageView android:id="@+id/imageRectangle1485"
                android:layout_gravity="start"
                android:layout_height="@dimen/_178pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_10pxh}"
                imageRes="@{@drawable/img_rectangle1485}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle1485"/>
            <LinearLayout android:id="@+id/linearRoweducation"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius_6">
                <LinearLayout android:id="@+id/linearRowclock"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_158pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.66"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageClock"
                        android:layout_height="@dimen/_14pxh"
                        android:layout_width="@dimen/_14pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_clock_white_a700"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_clock_white_a700"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDuration"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.88"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtDuration}"
                        style="@style/txtMetropolisregular12_2" tools:text="@string/msg_created_3_day_a"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnEducation"
                    android:layout_height="@dimen/_25pxv"
                    android:layout_marginBottom="@dimen/_153pxv"
                    android:layout_marginStart="@dimen/_128pxh"
                    android:layout_width="@dimen/_70pxh"
                    android:paddingHorizontal="@dimen/_6pxh"
                    android:paddingVertical="@dimen/_6pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_education"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_10" tools:text="@string/lbl_education"/>
            </LinearLayout>
        </FrameLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtHelpthemforb"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtHelpthemforb}"
            style="@style/txtMetropolisbold20" tools:text="@string/msg_help_them_for_b"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowunsplash6w4fsixtytwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <FrameLayout
                android:id="@+id/frameStackunsplash6w4fsixtytwo"
                android:layout_height="@dimen/_25pxv" android:layout_width="@dimen/_87pxh">
                <ImageView android:id="@+id/imageUnsplash6W4FSixtyTwo"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_unsplash6w4f62}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_unsplash6w4f62"/>
                <ImageView android:id="@+id/imageUnsplashmEZ3Po"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_unsplashmez3po}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashmez3po"/>
                <ImageView android:id="@+id/imageUnsplashWNoLnJ"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginEnd="@dimen/_22pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_unsplashwnolnj}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashwnolnj"/>
                <ImageView android:id="@+id/imageUnsplashymoyC"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_unsplashymoyc}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_unsplashymoyc"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txt120donated"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_weight="0.48" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txt120donated}"
                style="@style/txtMetropolisregular12_3" tools:text="@string/lbl_120_donated"/>
        </LinearLayout>
        <ProgressBar android:gravity="center_horizontal"
            android:id="@+id/progressBarGroup1447"
            android:indeterminate="false"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:max="100"
            android:minHeight="@dimen/_8pxv" android:progress="94"
            android:progressDrawable="@drawable/layer_list_bg_teal_400_75_radius_2" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
        <LinearLayout android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.45" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtPrice}"
                style="@style/txtMetropolismedium16" tools:text="@string/lbl_goals_2_000"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_99pxh"
                android:layout_weight="0.55" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtPriceOne}"
                style="@style/txtMetropolisregular14_1" tools:text="@string/msg_raised_1900"/>
        </LinearLayout>
        <View android:background="@color/gray_203"
            android:id="@+id/lineLineEighteen"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_341pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnellipsethirtysix"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowellipsethirtysix"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageEllipseThirtySix"
                    android:layout_height="@dimen/_43pxh"
                    android:layout_width="@dimen/_43pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_ellipse36}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse36"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnmonikaislam"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.74"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMonikaIslam"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtMonikaIslam}"
                        style="@style/txtMetropolisregular14_2" tools:text="@string/lbl_monika_islam"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDhakaBanglades"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtDhakaBanglades}"
                        style="@style/txtMetropolisregular14" tools:text="@string/msg_dhaka_banglades"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearDesandcom"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDescrption"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.42"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtDescrption}"
                    style="@style/txtMetropolismedium14_1" tools:text="@string/lbl_descrption"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCommentsFiftyEight"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_167pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.58"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtCommentsFiftyEight}"
                    style="@style/txtMetropolismedium14_2" tools:text="@string/lbl_comments_58"/>
            </LinearLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:text="@{insideFundraiserOneVM.insideFundraiserOneModel.txtDescription}"
                style="@style/txtMetropolisregular14" tools:text="@string/msg_lorem_ipsum_dol4"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnDonateNow"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_donate_now"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_11" tools:text="@string/lbl_donate_now"/>
        </LinearLayout>
    </LinearLayout>
</layout>
